--- a/gal/index.html
+++ b/gal/index.html
@@ -99,7 +99,7 @@
 
         <div class="page main-div" id="page">
             <figure class="swing">
-                <img src="img1.jpg" width="200">
+                <img src="img1.JPG" width="200">
             </figure>
             <figure class="swing">
                 <img src="img2.jpg" width="200">
